undo changes on mobile with font, fixed home image and such

--- a/style.css
+++ b/style.css
@@ -1001,7 +1001,7 @@ margin-bottom: 5rem; /* flexible spacing (5 × root font size) */}
   /* PHONE ONLY: 0px - 480px */
 @media (max-width: 480px) {
   .hero {
-    /* background: url('Images/PhoneBckg.webp') no-repeat center center / cover; */
+    background: url('Images/PhoneBckg.webp') no-repeat center center / cover;
     background-attachment: scroll;
     padding-top: 120px;
   }
@@ -1015,8 +1015,7 @@ margin-bottom: 5rem; /* flexible spacing (5 × root font size) */}
   }
 }
 
-/* COntrols font for mobile and tablet in work */
-@media (max-width: 1300px) {
+@media (max-width: 680px)  and (max-width: 1024px){
    h5, h4, p, figcaption {
     font-family: 'Poppins', sans-serif !important;
     font-weight: 400;
@@ -1037,7 +1036,7 @@ margin-bottom: 5rem; /* flexible spacing (5 × root font size) */}
 /* TABLETS: 481px - 1024px */
 @media (min-width: 481px) and (max-width: 1300px) {
   .hero {
-    /* background: url('Images/TabletBckg.webp') no-repeat center center / cover; */
+    background: url('Images/TabletBckg.webp') no-repeat center center / cover;
     background-color: black;
     background-attachment: scroll;
     padding-top: 140px;
